GOOGLE/Kubernetes/prime_deployment.yaml
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: prime-app
#  labels:
#    name: prime-app
#spec:
#  ports:
#    - protocol: TCP
#      port: 80
#      nodePort: 30380
#      name: http
#  sessionAffinity: ClientIP
#  type: LoadBalancer
##  loadBalancerIP: 130.211.12.49
#  selector:
#    name: prime-app
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: prime-ingress
#spec:
#  rules:
#  - host: nyl.advisorconnect.co
#    http:
#      paths:
#      -  backend:
#           serviceName: prime
#           servicePort: http
##           serviceName: prime
##           servicePort: https
#  tls:
#  - hosts:
#    - "*.advisorconnect.co"
#    secretName: tls
#---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prime-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: prime-app
  template:
    metadata:
      labels:
        name: prime-app
    spec:
      containers:
      - name: prime-app
        livenessProbe:
          exec:
            command:
            - cat
            - /proc/net/tcp
        image: gcr.io/advisorconnect-1238/aconn:1.0.31
        resources:
          requests:
            cpu: 4
            memory: "4Gi"
          limits:
            cpu: 5
            memory: "10Gi"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          protocol: TCP
          name: https
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prime-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      name: prime-worker
  template:
    metadata:
      labels:
        name: prime-worker
    spec:
      containers:
      - name: prime-worker
        livenessProbe:
          exec:
            command:
            - cat
            - /proc/net/tcp
        image: gcr.io/advisorconnect-1238/aconn:1.0.26
        args:
        - dev_run_worker
        resources:
          requests:
            cpu: 4
            memory: "4Gi"
          limits:
            cpu: 5
            memory: "10Gi"
