GOOGLE/Kubernetes/prime-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prime-app
  labels:
    name: prime-app
spec:
  ports:
    - protocol: TCP
      port: 30255
      nodePort: 30255
      targetPort: 80
      name: http
  sessionAffinity: ClientIP
  type: NodePort
  selector:
    name: prime-app
